made profile grid desktop responsive

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -31,10 +31,10 @@
     </div>
     <div class="section mb-0">
       <h6><%= link_to visit.lock.name, lock_path(visit.lock.id), :class => "stretched-link text-decoration-none mb-0" %></h6>
-      <div id="calendar" class="position-absolute mt-0 mb-0">
+      <div id="calendar" class="position-absolute start-50 translate-middle-x mt-0 mb-0">
         <i class="fa-solid fa-calendar"></i>
       </div>
-      <div class="position-absolute day-month"> <p><strong><%= visit.unlocked_date.strftime "%d %^b" %></strong></p></div>
+      <div class="position-absolute start-50 translate-middle-x day-month"> <p><strong><%= visit.unlocked_date.strftime "%d %^b" %></strong></p></div>
     </div>
   </div>
 <% end %>
