--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -46,7 +46,6 @@
   opacity: 80%;
   font-size: xx-large;
   line-height: 0;
-  left: 83px;
   top: 80px;
 }
 
@@ -55,7 +54,6 @@
   opacity: 80%;
   font-size: xx-small;
   line-height: 0;
-  left: 83px;
   top: 80px;
 }
 
@@ -65,11 +63,14 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cards-home .card {
   flex-direction: column;
   font-size: x-small;
+  text-align: center;
 }
 
 .cards-home .card p {
@@ -86,8 +87,7 @@
 }
 
 .profile-locks {
-  width: 116px;
-  height: 116px;
+  width: 100%;
   object-fit: cover;
   border-radius: 2%;
 }
@@ -99,3 +99,19 @@
   padding-right: 3px;
   width: 30px;
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards-home {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+  .cards-home {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+ }
