--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,19 +24,19 @@
           </li>
           <%# ADMIN ON DESKTOP VIEW %>
           <div class="desktop-nav">
-            <%= link_to locks_view_requests_path do %>
+            <%= link_to locks_view_requests_path, class:"me-4" do %>
               <i class="fa-solid fa-gears"></i>
             <% end %>
-            <%= link_to new_lock_path do %>
+            <%= link_to new_lock_path, class:"me-4" do %>
               <i class="fa-solid fa-circle-plus"></i>
             <% end %>
-            <%= link_to root_path do %>
+            <%= link_to root_path, class:"me-4" do %>
               <i class="fa-solid fa-house-chimney"></i>
             <% end %>
-            <%= link_to leaderboard_path do %>
+            <%= link_to leaderboard_path, class:"me-4" do %>
               <i class="fa-solid fa-trophy"></i>
             <% end %>
-            <%= link_to notifications_path(current_user.username) do %>
+            <%= link_to notifications_path(current_user.username), class:"me-2" do %>
               <i class="fa-solid fa-bell"></i>
               <% if current_user.notifications.unread.length > 0 %>
                 <div class="notification_no position-absolute mt-1 translate-middle badge rounded-circle bg-danger">
@@ -59,16 +59,16 @@
             </li>
           <%# NORMAL USER DESKTOP VIEW %>
           <div class="desktop-nav">
-            <%= link_to new_lock_path do %>
+            <%= link_to new_lock_path, class:"me-4" do %>
               <i class="fa-solid fa-circle-plus"></i>
             <% end %>
-            <%= link_to root_path do %>
+            <%= link_to root_path, class:"me-4" do %>
               <i class="fa-solid fa-house-chimney"></i>
             <% end %>
-            <%= link_to leaderboard_path do %>
+            <%= link_to leaderboard_path, class:"me-4" do %>
               <i class="fa-solid fa-trophy"></i>
             <% end %>
-            <%= link_to notifications_path(current_user.username) do %>
+            <%= link_to notifications_path(current_user.username), class:"me-2" do %>
               <i class="fa-solid fa-bell"></i>
               <% if current_user.notifications.unread.length > 0 %>
                 <div class="notification_no position-absolute mt-1 translate-middle badge rounded-circle bg-danger">
@@ -88,19 +88,19 @@
           </li>
           <%# LOGGED OUT DESKTOP VIEW %>
           <div class="desktop-nav">
-            <%= link_to new_lock_path do %>
+            <%= link_to new_lock_path, class:"me-4" do %>
               <i class="fa-solid fa-circle-plus"></i>
             <% end %>
-            <%= link_to root_path do %>
+            <%= link_to root_path, class:"me-4" do %>
               <i class="fa-solid fa-house-chimney"></i>
             <% end %>
-            <%= link_to leaderboard_path do %>
+            <%= link_to leaderboard_path, class:"me-4" do %>
               <i class="fa-solid fa-trophy"></i>
             <% end %>
-            <%= link_to new_user_session_path do %>
+            <%= link_to new_user_session_path, class:"me-4" do %>
                 <i class="fa-solid fa-bell"></i>
             <% end %>
-            <%= link_to new_user_session_path do %>
+            <%= link_to new_user_session_path, class:"me-4" do %>
               <i class="fas fa-user"></i>
             <% end %>
             <li class="nav-item">
