--- a/app/assets/stylesheets/pages/_lock_show.scss
+++ b/app/assets/stylesheets/pages/_lock_show.scss
@@ -65,6 +65,10 @@ text-align: left;
   border-bottom-right-radius: 24px;
 }
 
+.special_message_turn_on_location {
+font-size: small;
+}
+
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
 
